...
  const renderHeader = (
    <>
      <Text style={styles.heading}>{t('subscriptions.subscriptions')}</Text>
      <SubscriptionFilterControl
        onChange={handleSubscriptionFilterChange}
        selectedFilter={subscriptionFilter ?? DEFAULT_SUBSCRIPTION_FILTER}
        testID="library-subscriptions-filter"
      />
    </>
  );

  return (
    <View style={styles.container} testID="library-subscriptions-screen">
      <FlatList
        ListEmptyComponent={statusOverlay}
        ListHeaderComponent={renderHeader}
        columnWrapperStyle={columns > 1 ? styles.gridRow : undefined}
        contentContainerStyle={styles.content}
        data={statusOverlay === null ? subscriptions : []}
...
